--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -5,6 +5,11 @@
 
 .container {
   text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  grid-template-rows: auto 1fr auto;
+  gap: 4px;
+  height: 100vh;
 }
 
 .container div {
@@ -17,6 +22,27 @@
 
 .header {
   background-color: #393f4d;
+  grid-area: 1 / 1 / 2 / 3;
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  place-items: center;
+}
+
+.menu{
+  width: 100%;
+}
+
+.menu > ul{
+  grid-column: 2 / 3;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  list-style-type: none;
+  width: 100%;
+  place-items: center;
+}
+
+.logo{
+  justify-self: left;
 }
 
 .menu ul,
@@ -26,6 +52,11 @@
 
 .sidebar {
   background-color: #C50208;
+  grid-column: 1 / 2;
+  display: grid;
+  grid-area: 2 / 1 / 4 / 2;
+  grid-template-rows: repeat(auto-fit, minmax(50px, auto));
+  gap: 50px;
 }
 
 .sidebar .photo {
@@ -46,6 +77,10 @@
 
 .nav {
   background-color: #C50208;
+  grid-area: 2 / 2 / 3 / 3;
+  display: grid;
+  width: 100%;
+  place-items: center;
 }
 
 .nav ul li {
@@ -55,6 +90,7 @@
 
 .article {
   background-color: #bccbde;
+  grid-area: 3 / 2 / 4 / 3;
 }
 
 .article p {
@@ -83,6 +119,7 @@
 
 .footer {
   background-color: #393f4d;
+  grid-area: 4 / 1 / 5 / 3;
 }
 
 .footer p {
